--- a/productscard/src/main/res/values/strings.xml
+++ b/productscard/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="main_button_compose_based">Compose based</string>
     <string name="pay">Pay</string>
     <string name="loading">LOADING</string>
+    <string name="total_price">Total price: </string>
+    <string name="basket">Basket</string>
+    <string name="card_reader_failed">Card reader failed</string>
+    <string name="payment_processing">Payment processing</string>
+    <string name="payment_failed">Payment failed</string>
+    <string name="payment_success">Payment success</string>
 
     <!-- Test tags   -->
     <string name="product_list_test_tag">ProductList</string>
